--- a/config/locales/controllers.en.yml
+++ b/config/locales/controllers.en.yml
@@ -7,7 +7,7 @@ en:
       success: 'Wallet "%{name}" was successfully updated.'
       error: 'Wallet "%{name}" could not be updated: %{error}'
     destroy:
-      success: 'Wallet "%{name}" was successfully destroyed.'
+      success: 'Wallet "%{name}" was successfully disabled.'
 
   wallet_share_invites_sent:
     create:
@@ -22,7 +22,7 @@ en:
       success: 'Category was successfully updated.'
       error: 'Category could not be updated: %{error}'
     destroy:
-      success: 'Category was successfully destroyed.'
+      success: 'Category "%{name}" was successfully destroyed.'
 
   current_wallets:
     create:
