--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -175,7 +175,7 @@ en:
           title: Login
           email_label: Email Address
           password_label: Password
-          submit: Submit
+          submit: Log in
       unlocks:
         new:
           title: Resend unlock instructions
