Create empty categories show page

--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -428,7 +428,7 @@
           "title": "Categories"
         },
         "show": {
-          "title": "Category"
+          "title": "Category \"%{name}\""
         }
       },
       "dashboard": {
