--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -462,7 +462,7 @@
           "title": "Categorias"
         },
         "show": {
-          "title": "Categoria"
+          "title": "Categoria \"%{name}\""
         }
       },
       "dashboard": {
