Add recent transactions, summary to categories show page, improve PageHeader UX a bit

--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -428,7 +428,13 @@
           "title": "Categories"
         },
         "show": {
-          "title": "Category \"%{name}\""
+          "disable": "Delete",
+          "edit": "Edit",
+          "expenses": "Expenses",
+          "money_in": "Money In",
+          "sub_header_recent_transactions": "Recent Transactions",
+          "sub_header_summary": "Summary",
+          "title": "Category"
         }
       },
       "dashboard": {
