--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -462,7 +462,13 @@
           "title": "Categorias"
         },
         "show": {
-          "title": "Categoria \"%{name}\""
+          "disable": "Deletar",
+          "edit": "Editar",
+          "expenses": "Gastos",
+          "money_in": "Receita",
+          "sub_header_recent_transactions": "Transações Recentes",
+          "sub_header_summary": "Resumo",
+          "title": "Categoria"
         }
       },
       "dashboard": {
