--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -567,6 +567,7 @@
           "new": {
             "email_label": "Email Address",
             "password_label": "Password",
+            "remember_me_label": "Stay signed in",
             "submit": "Log in",
             "title": "Login"
           }
