--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -601,6 +601,7 @@
           "new": {
             "email_label": "Endereço de email",
             "password_label": "Senha",
+            "remember_me_label": "Manter-me logado",
             "submit": "Entrar",
             "title": "Login"
           }
