Add category summaries to Dashboard

--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -438,6 +438,7 @@
         }
       },
       "dashboard": {
+        "category_summary": "Categories Summary",
         "recent_transactions": "Recent Transactions",
         "title": "Dashboard"
       },
