--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -72,6 +72,7 @@ en:
     dashboard:
       title: Dashboard
       recent_transactions: Recent Transactions
+      category_summary: Categories Summary
     devise:
       alternative_links: 'Or, you can also:'
       sign_in: Sign In
