--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -70,9 +70,10 @@ en:
         edit: Edit
         disable: Delete
     dashboard:
-      title: Dashboard
-      recent_transactions: Recent Transactions
-      category_summary: Categories Summary
+      show:
+        title: Dashboard
+        recent_transactions: Recent Transactions
+        category_summary: Categories Summary
     devise:
       alternative_links: 'Or, you can also:'
       sign_in: Sign In
@@ -162,6 +163,10 @@ en:
         name_label: Name
         submit: Submit
         back: Back
+      types:
+        credit_transactions: Money In
+        debit_transactions: Expenses
+        all_transactions: All
     users:
       confirmations:
         new:
