Add per page option, redo pagination UI

--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -467,9 +467,8 @@
           "disable_confirmation": "Are you sure? You can re-enable this in the future.",
           "edit": "Edit",
           "page_desc": "Showing %{items} of %{total}",
-          "page_next": "Next",
-          "page_prev": "Previous",
           "pagination": "Pagination",
+          "per_page": "Per Page:",
           "toast_title_danger": "Error",
           "toast_title_info": "Info",
           "toast_title_success": "Info",
