--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -501,9 +501,8 @@
           "disable_confirmation": "Tem certeza? Você pode re-habilitar isto no futuro.",
           "edit": "Editar",
           "page_desc": "Exibindo %{items} de %{total}",
-          "page_next": "Próxima",
-          "page_prev": "Anterior",
           "pagination": "Paginação",
+          "per_page": "Por Página:",
           "toast_title_danger": "Erro",
           "toast_title_info": "Info",
           "toast_title_success": "Info",
