--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -98,8 +98,7 @@ en:
         disable_confirmation: Are you sure? You can re-enable this in the future.
         edit: Edit
         pagination: Pagination
-        page_prev: Previous
-        page_next: Next
+        per_page: 'Per Page:'
         page_desc: 'Showing %{items} of %{total}'
         toast_title_success: Info
         toast_title_info: Info
