--- a/config/locales/views.pt-BR.yml
+++ b/config/locales/views.pt-BR.yml
@@ -71,6 +71,7 @@ pt-BR:
         expenses: Gastos
         edit: Editar
         disable: Deletar
+        new_subcategory: Criar Subcategoria
     dashboard:
       show:
         title: Dashboard
