--- a/config/locales/views.pt-BR.yml
+++ b/config/locales/views.pt-BR.yml
@@ -138,6 +138,13 @@ pt-BR:
         empty_first_name_label: '-- Nome não informado --'
         empty_last_name_label:  '-- Sobrenome não informado --'
         empty_default_wallet_label: '-- Carteira padrão não informada --'
+    subcategories:
+      form:
+        submit: Salvar
+        cancel: Cancelar
+        name_label: Nome
+        new_title: Nova Subcategoria
+        edit_title: Editar Subcategoria "%{name}"
     transactions:
       index:
         title: Transações
