Users can see existing subcategories for a category, and can edit a subcategory

--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -481,6 +481,7 @@
           "money_in": "Receita",
           "new_subcategory": "Criar Subcategoria",
           "sub_header_recent_transactions": "Transações Recentes",
+          "sub_header_subcategories": "Subcategorias",
           "sub_header_summary": "Resumo",
           "title": "Categoria"
         }
