--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -447,6 +447,7 @@
           "money_in": "Money In",
           "new_subcategory": "Create Subcategory",
           "sub_header_recent_transactions": "Recent Transactions",
+          "sub_header_subcategories": "Subcategories",
           "sub_header_summary": "Summary",
           "title": "Category"
         }
