--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -65,6 +65,7 @@ en:
         title: 'Category'
         sub_header_summary: Summary
         sub_header_recent_transactions: Recent Transactions
+        sub_header_subcategories: Subcategories
         money_in: Money In
         expenses: Expenses
         edit: Edit
