Allow users to disable subcategories

--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -419,7 +419,7 @@
         "success": "Subcategoria \"%{name}\" criada com sucesso."
       },
       "destroy": {
-        "success": "Categoria \"%{name}\" removida com sucesso."
+        "success": "Categoria \"%{name}\" desabilitada com sucesso."
       },
       "update": {
         "error": "Subcategoria \"%{name}\" não pode ser atualizada: %{error}",
@@ -515,6 +515,7 @@
           "disable": "Desativar",
           "disable_confirmation": "Tem certeza? Você pode re-habilitar isto no futuro.",
           "edit": "Editar",
+          "generic_error": "Um erro inesperado ocorreu. Por favor atualize a página e tente novamente.",
           "page_desc": "Exibindo %{items} de %{total}",
           "pagination": "Paginação",
           "per_page": "Por Página:",
