--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -385,7 +385,7 @@
         "success": "Subcategory \"%{name}\" was successfully created."
       },
       "destroy": {
-        "success": "Subcategory \"%{name}\" was successfully destroyed."
+        "success": "Subcategory \"%{name}\" was successfully disabled."
       },
       "update": {
         "error": "Subcategory \"%{name}\" could not be updated: %{error}",
@@ -481,6 +481,7 @@
           "disable": "Disable",
           "disable_confirmation": "Are you sure? You can re-enable this in the future.",
           "edit": "Edit",
+          "generic_error": "An unexpected error has occurred. Please reload the page and try again.",
           "page_desc": "Showing %{items} of %{total}",
           "pagination": "Pagination",
           "per_page": "Per Page:",
