--- a/config/locales/controllers.pt-BR.yml
+++ b/config/locales/controllers.pt-BR.yml
@@ -41,7 +41,7 @@ pt-BR:
       success: 'Subcategoria "%{name}" atualizada com successo.'
       error: 'Subcategoria "%{name}" não pode ser atualizada: %{error}'
     destroy:
-      success: 'Categoria "%{name}" removida com sucesso.'
+      success: 'Categoria "%{name}" desabilitada com sucesso.'
 
   transactions:
     create:
