--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -683,6 +683,7 @@
         "invite_paragraph": "%{inviter} has invited you to share their Finance Micromanager wallet \"%{wallet_name}\". This will allow you to view and manage the wallet, create transactions, view reports and statistics data, and much more. To accept, click the link below or copy/paste it directly in your browser.\n",
         "new_wallet_paragraph": "Ops, it looks like you don't yet have an account with Finance Micromanager. You will need to sign up for one before accepting the invite. Click the link below or copy/paste it directly in your browser to do that.\n",
         "sign_up_link": "Sign Up for Finance Micromanager",
+        "subject": "You got an invite from %{inviter}!",
         "view_invite_link": "View my invites"
       }
     },
