--- a/config/locales/controllers.en.yml
+++ b/config/locales/controllers.en.yml
@@ -54,3 +54,8 @@ en:
       error: 'Transaction could not be updated: %{error}'
     destroy:
       success: 'Transaction was successfully destroyed.'
+
+  wallets:
+    create:
+      success: 'Wallet "%{name}" was successfully created.'
+      error: 'Wallet could not be created: %{error}'
